# udemy

./: .gitignore  README.md
pierian-data-old/My Python Stuff/: Untitled1.ipynb  myfile.txt
pierian-data/My Python Stuff/: Untitled.ipynb
qt-6-core-beginners/: .gitignore  CMakeCache.txt
qt-6-core-beginners-with-cpp-mac-mini-2024-03-22/: .gitignore
qt-6-core-beginners/01-exploring-the-ide/: CMakeLists.txt
qt-6-core-beginners/01a-exploring-the-ide-gui/: CMakeLists.txt
qt-6-core-beginners/qt6cb-03-01/: main.cpp
qt-6-core-beginners/qt6cb-03-01-assignment/: CMakeLists.txt  main.cpp
qt-6-core-beginners/qt6cb-05-06-061z-assignment/: CMakeLists.txt  main.cpp
qt-6-core-beginners/qt6cb-11-4--lect-112/: .gitignore  CMakeLists.txt  destination.cpp  destination.h  main.cpp  qtDeansQtHelper.h  source.cpp  source.h
qt-6-core-beginners/qt6cb-11-5-113-disconnecting/: .gitignore  CMakeLists.txt  main.cpp  radio.cpp  radio.h  station.cpp  station.h
qt-6-core-beginners/qt6cb-11-6-q_property/: CMakeLists.txt  main.cpp  test.cpp  test.h  watcher.cpp  watcher.h
qt-6-core-beginners/qt6cb-11-7-timer/: CMakeLists.txt  main.cpp  test.cpp  test.h
qt-6-core-beginners/qt6cb-11-8-dog-example/: .gitignore  CMakeLists.txt  dog.cpp  dog.h  main.cpp  owner.cpp  owner.h
qt-6-core-beginners/qt6cb-11-9-assignment/: .gitignore  CMakeLists.txt  both.cpp  both.h  main.cpp  monitor.cpp  monitor.h  receiver.cpp  receiver.h  sender.h  sendquitapp.cpp  sendquitapp.h
qt-6-core-beginners/qt6cb-3-01/: CMakeLists.txt
qt-6-core-beginners/qt6cb-3-01-assignment/: main.cpp
(+68 files in other folders)
